--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^6.4.0",
     "babel-preset-es2015": "^6.13.2",
     "browser-sync": "^2.14.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
@@ -34,6 +35,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0",
+    "mocha": "^3.0.2",
     "moment": "^2.14.1",
     "prismjs": "^1.5.1",
     "pump": "^1.0.1"
